# morningritual

./: .gitignore  CMakeLists.txt  README.md
build-linux64/: CMakeCache.txt  Makefile  cmake_install.cmake  morningritual
build-linux64/data/levels/lvl1/: lvl_0_root.txt  lvl_layer0.txt
build-linux64/data/levels/lvl2/: lvl_0_root.txt  lvl_layer0.txt
build-linux64/data/levels/lvl2-old/: lvl_layer0.txt
data/GUI/: tileTest.ai
data/levels/Level 1/: lvl_0_root.txt  lvl_layer0.txt  lvl_layer1.txt
data/levels/Level 2/: lvl_layer0.txt  lvl_layer1.txt
data/levels/Level 3/: lvl_0_root.txt  lvl_layer0.txt
data/levels/Level 4/: lvl_0_root.txt  lvl_layer0.txt
data/levels/level3 (simplest)/: lvl_0_root.txt  lvl_layer0.txt
data/levels/lvl2/: lvl_0_root.txt  lvl_layer0.txt
data/levels/lvl2-old/: lvl_0_root.txt
data/levels/lvl2_n/: lvl_layer0.txt  lvl_layer1.txt
planning/: level-format.txt
planning/example-level/: lvl_0_root.txt  lvl_layer0.txt
src/: cell.cpp  cell.h  cellnew.h  common.cpp  common.h  entity.cpp  entity.h  game.cpp  game.h  gui.cpp  gui.h  layer.cpp  layer.h  main.cpp  menu.h  path.h  soundmanager.cpp  soundmanager.h  widget.cpp  widget.h  world.cpp  world.h
